test/compile_errors/err_split_at_mut_readonly_receiver.w
//! expect-check-fail: split_at_mut() requires a mutable place receiver

fn main:
    let _parts = [1, 2, 3].split_at_mut(1)
